--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8887
+img.location=E:/workspace/img
 github.client.id=2a9ceeee31254d91b7e2
 github.client.secret=17bdf5de774d14f8a3d95b1e6b1b8fe3d3bd846b
 github.redirect.uri=http://localhost:8887/callback/github
